Propagation context - scope value