@@ -18,7 +18,13 @@ dependencies {
     compileOnly(libs.managed.graalvm.nativeimage)
     compileOnly(libs.managed.kotlin.stdlib)
     compileOnly(libs.managed.netty.common)
+    testImplementation(libs.junit.jupiter.params)
 }
+
+tasks.withType<JavaExec> {
+    jvmArgs = listOf("--enable-preview")
+}
+
 
 spotless {
     java {
